--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">film-forest</string>
+    <string name="menu_header_text">Need a movie?</string>
+    <string name="start_search_button">Start search</string>
 </resources>
