--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">film-forest</string>
     <string name="menu_header_text">Need a movie?</string>
     <string name="start_search_button">Start search</string>
+    <string name="friends_picture">Friends watching a movie</string>
+    <string name="logo">Logo</string>
 </resources>
