--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="menu_header_text">Need a movie?</string>
     <string name="start_search_button">Start search</string>
     <string name="search_by">Search by</string>
+    <string name="search_results">Search results</string>
     <string name="genre">Genre</string>
     <string name="release_year">Release Year</string>
     <string name="runtime">Runtime</string>
