--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">film-forest</string>
     <string name="menu_header_text">Need a movie?</string>
     <string name="start_search_button">Start search</string>
+    <string name="find_movie_button">Find a movie</string>
     <string name="search_by">Search by</string>
     <string name="genre">Genre</string>
     <string name="release_year">Release Year</string>
