--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="optional">Optional</string>
     <string name="surprise_button">Surprise me</string>
     <string name="friends_picture">Friends watching a movie</string>
+    <string name="home_button">Return to home screen</string>
     <string name="logo">Logo</string>
     <string name="action">Action</string>
     <string name="adventure">Adventure</string>
